# cmake

./: README.md
project/: CMakeLists.txt  README.md  main.cpp  utilities.cpp
project/inc/: utilities.h
project/jsonify/: jsonify.cpp  jsonify.h
